--- a/app/assets/stylesheets/alongslide.sass
+++ b/app/assets/stylesheets/alongslide.sass
@@ -2,11 +2,11 @@
 // alongslide.sass: Set up CSS Regions and basic scrolling mechanism.
 //
 // Copyright 2013 Canopy Canopy Canopy, Inc.
-// 
+//
 
-// 
+//
 // FIXED pixel-based values from comps.
-// 
+//
 $fixed-frame-width: 980px
 $fixed-frame-height: 612.5px
 
@@ -31,9 +31,9 @@ $fixed-three-column-width: fixed-width-in-bars($wide: 5, $narrow: 6)
 $fixed-2-column-inner-margin: fixed-width-in-bars($wide: 1, $narrow: 2)
 $fixed-3-column-inner-margin: fixed-width-in-bars($wide: 1, $narrow: 0)
 
-// 
+//
 // PERCENTAGE-based values based on fixed values above
-// 
+//
 $full-bleed: 100%
 $outer-margin-width: percentage($fixed-column-outer-margin / $fixed-frame-width)
 $outer-margin-height: percentage($fixed-column-outer-margin / $fixed-frame-height)
@@ -43,23 +43,23 @@ $vertical-grid-unit: percentage($fixed-vertical-grid-unit / $fixed-frame-height)
 $width-2-column: ($full-bleed - 2 * $outer-margin-width - $inner-margin-2-column) / 2
 $width-3-column: ($full-bleed - 2 * $outer-margin-width - 2 * $inner-margin-3-column) / 3
 
-$white-bg: #fbfbfb
+$white-bg: #ffffff
 
 
 // skrollr elements must all be fixed.
-// 
+//
 @mixin scrollable
   position: fixed
   &.unstaged
     position: static
 
 // Hide Alongslide directives.
-// 
+//
 .alongslide
   display: none
 
 // Horizontally-scrolling content viewer.
-// 
+//
 #frames
   height: $full-bleed
   background-color: $white-bg
@@ -71,29 +71,29 @@ $white-bg: #fbfbfb
     line-height: 1em
 
   // One frame is one screen's worth.
-  // 
+  //
   // Panels, flow, backgrounds (front-to-back order) all contain frames.
-  // 
+  //
   .frame
     width: $full-bleed
     height: $full-bleed
     @include scrollable
 
   // Columns
-  // 
+  //
   // Flowing text laid out by CSS Regions.
-  // 
+  //
   // Column dimensions are all defined in percentages. FixedAspect then overwites
   // the dimensions of `#frames > .flow > .frame`, and the contained columns
   // fit accordingly.
-  // 
+  //
   // Contrast with what FixedAspect does with panels below.
-  // 
+  //
   .flow
     .frame
 
       // One text column
-      // 
+      //
       .column
         width: $width-2-column
         height: 45 * $vertical-grid-unit
@@ -107,17 +107,17 @@ $white-bg: #fbfbfb
               text-indent: 0 !important
 
         // Left/right columns
-        // 
+        //
         &:nth-child(1)
           left: $outer-margin-width
         &:nth-child(2)
           right: $outer-margin-width
 
       // With pinned panel: top/bottom
-      // 
+      //
       // All column values assume 'half' size by default and treat
       // 'one-third' and 'two-thirds' as overwrites.
-      // 
+      //
       &.with-panel-pinned-bottom
         .column
           height: 19 * $vertical-grid-unit
@@ -138,7 +138,7 @@ $white-bg: #fbfbfb
           height: 11 * $vertical-grid-unit
 
       // With pinned panel: left/right
-      // 
+      //
       &.with-panel-pinned-left, &.with-panel-pinned-right
         .column
           width: $width-2-column
@@ -156,7 +156,7 @@ $white-bg: #fbfbfb
           left: $outer-margin-width + 2 * ($width-3-column + $inner-margin-3-column)
 
       // Three column layout
-      // 
+      //
       &.three-columns
         .column
           width: $width-3-column
@@ -180,21 +180,21 @@ $white-bg: #fbfbfb
               left: $outer-margin-width + 2 * ($width-3-column + $inner-margin-3-column)
 
   // Panels
-  // 
+  //
   // Contrary to columns above, all values are defined in pixels, which
   // FixedAspect uses to re-apply percentages in JS. It then overwrites
   // the below pixel-based values with percentage values based on aspect.
-  // 
+  //
   // The reason is that JS can't access the CSS percentage values anyway,
   // so, to maintain floating point precision, we may as well do the
   // math in JS--rather than go from pixels to percentages in SASS, and then
   // re-derive the percentages in JS, which will be rounded to integers
   // (and therefore exhibit sampling inaccuracy).
-  // 
+  //
   // The rule is:
   // - `.panel` is the content area, defined in fixed pixel widths
   // - `.panel .contents` is relative to the content area
-  // 
+  //
   .panels
     .panel
       width: $fixed-frame-width
@@ -212,7 +212,7 @@ $white-bg: #fbfbfb
         overflow: visible
 
         // Class for inner padding. This one _is_ percentage-based.
-        // 
+        //
         .inner
           width: 100%
           height: 100%
@@ -220,15 +220,15 @@ $white-bg: #fbfbfb
           z-index: 101
 
           // Responsive images
-          img 
+          img
             max-width: 100%
             height: auto
-      
+
       // Pinned
-      // 
+      //
       // As with columns, default size is 'half'.
       // 'one-third' and 'two-thirds' overwrite.
-      // 
+      //
       &.pin
         background-color: $white-bg
         &.top
@@ -308,7 +308,7 @@ $white-bg: #fbfbfb
               left: percentage($fixed-panel-margin-two-thirds / $fixed-panel-width-two-thirds)
 
   // Section backgrounds
-  // 
+  //
   .backgrounds
     .background
       width: $full-bleed
@@ -345,7 +345,7 @@ $white-bg: #fbfbfb
       margin-left: 1%
 
 // DEBUG GRID
-// 
+//
 #als-debug-grid
   position: fixed
   width: 100%
@@ -432,7 +432,7 @@ $white-bg: #fbfbfb
     top: 0
     width: 100%
     height: 100%
-    background: #fbfbfb
+    background: #ffffff
     h1
       font-size: 54px
       line-height: 1em
