--- a/app/assets/stylesheets/alongslide.sass
+++ b/app/assets/stylesheets/alongslide.sass
@@ -333,6 +333,7 @@ $white-bg: #ffffff
       text-indent: 0%
       padding: 2% 6% 0% 6%
   .als-fn-sup
+    line-height: 0
     position: relative
     top: -0.8em
     z-index: 1000000
