restore action_view-based render for template support

--- a/app/views/panel/panel.haml
+++ b/app/views/panel/panel.haml
@@ -5,4 +5,4 @@ greedy: true
 .alongslide.show.panel{"data-alongslide-id" => identifier, :class => classes}
   .contents
     .inner
-      = content.join.html_safe
+      = raw content.join
